增加获取tag列表接口，更新文档
